--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-email": "^1.9.5",
+    "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
