--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
-    "sass": "^1.69.5",
     "source-map-loader": "^5.0.0",
     "three": "^0.170.0",
     "web-vitals": "^2.1.4",
@@ -49,6 +48,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.53.0"
+    "eslint": "^8.53.0",
+    "sass": "^1.81.0"
   }
 }
