--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
+    "sass-loader": "^16.0.3",
     "source-map-loader": "^5.0.0",
     "three": "^0.170.0",
     "web-vitals": "^2.1.4",
@@ -48,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint": "^8.53.0",
     "sass": "^1.81.0"
   }
