--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.18.0",
     "react-scripts": "^5.0.1",
+    "react-social-media-embed": "^2.5.17",
     "react-toastify": "^9.1.3",
     "sass-loader": "^16.0.3",
     "source-map-loader": "^5.0.0",
