--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "react-scripts": "^5.0.1",
     "react-social-media-embed": "^2.5.17",
     "react-toastify": "^9.1.3",
-    "sass-loader": "^16.0.3",
     "source-map-loader": "^5.0.0",
     "three": "^0.170.0",
     "web-vitals": "^2.1.4",
@@ -52,6 +51,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint": "^8.53.0",
-    "sass": "^1.81.0"
+    "sass": "^1.85.0",
+    "sass-loader": "^16.0.4"
   }
 }
